--- a/bash-prompt.config
+++ b/bash-prompt.config
@@ -21,6 +21,8 @@ USER_ROOT_PROMPT_KONSOLE=
 
 # Set default values
 DEFAULT_PS1='[\u@$HOSTN:\w]\$ '
+# Nice look command prompt
+#DEFAULT_PS1='\[\033[01;31m\]\u\[\033[01;33m\]@\[\033[01;36m\]\h \[\033[01;33m\]\w\[\033[01;35m\]\$ \[\033[00m\]'
 DEFAULT_PROMPT_BASH='\033]0;${UPTIME}\007'
 DEFAULT_PROMPT_KONSOLE='\e]30;${USER}@${HOSTN}\a\e[28;${COLOR}t'
 
